# gst_debugger

./: README.md  commnads.txt  log.txt
log_viewer/: Cargo.toml
log_viewer/src/: main.rs
log_viewer/src/public/: index.html
