[package]
name = "log_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.26"  # Make sure this version supports what you need
egui = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1"
serde_json = "1"
futures = "0.3"
petgraph = "0.6"

