[package]
name = "log_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
gstreamer = "0.21"
chrono = "0.4"
eframe = "0.26"
egui = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1"
serde_json = "1"
futures = "0.3"
petgraph = "0.6"

